--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -10,7 +10,8 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.recyclerview:recyclerview:1.3.0"
     implementation "com.google.android.material:material:1.8.0"
-//    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation "com.github.bumptech.glide:glide:4.15.0"
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
 
     //dagger
     implementation "com.google.dagger:hilt-android:2.44"
