--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,6 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-BASE_URL = "https://api.themoviedb.org/3/"
+BASE_URL = "api.themoviedb.org"
 IMAGE_URL = "https://image.tmdb.org/t/p/original"
 API_KEY = "9094204b474e714bd3ece1d0b846d127"
