--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -11,11 +11,13 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.3.0"
     implementation "com.google.android.material:material:1.8.0"
     implementation "com.github.bumptech.glide:glide:4.15.0"
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
 
     //dagger
     implementation "com.google.dagger:hilt-android:2.44"
     kapt 'com.google.dagger:hilt-compiler:2.45'
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
+
 }
