--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -20,4 +20,6 @@ dependencies {
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 
+    implementation "com.airbnb.android:lottie:6.0.0"
+    implementation "com.facebook.shimmer:shimmer:0.5.0"
 }
