--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,4 @@ android.nonTransitiveRClass=true
 
 BASE_URL = "api.themoviedb.org"
 IMAGE_URL = "https://image.tmdb.org/t/p/original"
-API_KEY = "9094204b474e714bd3ece1d0b846d127"
+API_KEY = "API_KEY"
